# optimus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy_guide.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_import.py
.docs/: CHANNELS-SETUP.md  COOLIFY-CICD.md  COOLIFY-SETUP.md  ENGINEERING-GUIDE.md  ENGINEERING-OPTIMUS.md  Prompt-COT.md  Roadmap-Optimus.md  agent-claude.md  avaliacao-brutal-unicornio.md  complete-guide-control.md  edge-tts-integration.md  extract_html_design_system.md  formatacao.md  planning-optimus.md  prompt-avancado.md  roadmap-optimus-v2.md  roadmap.md
.github/workflows/: ci.yml  deploy.yml
migrations/: 001_initial_schema.sql  008_conversations.sql  009_files.sql  010_auth.sql  011_cost_tracking.sql  012_knowledge.sql  013_update_optimus_soul.sql  014_user_preferences.sql  015_user_agents.sql  016_google_oauth.sql  017_agent_memory.sql  018_imap_accounts.sql  019_optimus_no_greeting.sql  020_apple_credentials.sql  021_remove_predefined_agents.sql  022_audit_log.sql  023_embeddings_temporal.sql  024_tts_mode.sql
monitoring/: prometheus.yml
scripts/: apply_migrations.py
src/: main.py
tests/: manual_audio_test.py  manual_ingestion_test.py  manual_vision_test.py  test_agents.py  test_channels.py  test_collaboration.py  test_e2e.py  test_engine.py  test_files_multimodal.py  test_jarvis.py  test_orchestration.py  test_polish.py  test_proactive.py  test_react.py  test_sandbox.py  test_wake_word.sh  verify_deploy.py
workspace/: AGENTS.md  BOOT.md  HEARTBEAT.md  USER.md
(+129 files in other folders)
